@@ -45,6 +45,9 @@ dnl Checks for libraries.
 dnl empty action if found - libtool will take care of things
 AC_CHECK_LIB(db, db_open, :)
 
+dnl check for pthreads
+AC_CHECK_LIB(pthread, pthread_create)
+
 dnl Checks for header files.
 AC_HEADER_STDC
 AC_CHECK_HEADERS(fcntl.h limits.h)
