@@ -1,3 +1,8 @@
+Wed Feb 23 19:00:10 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>
+
+	* Added initial pthread locking support.  More does need to be
+	  done.
+
 Wed Feb 23 17:33:43 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>
 
 	* Added a test "includetest" which simply checks that a program
